--- a/css/style.css
+++ b/css/style.css
@@ -380,12 +380,16 @@ footer a:hover{
     .iconsBar{
         margin-bottom: 20px;
     }
+
+    .logoFooter{
+        margin: 0px 0px 70px 0px;
+    }
 }
 
 @media(min-width: 1200px){
     
     footer:before{
-        bottom: -276px;
+        bottom: -185px;
     }
     
     .hideButton{
@@ -394,6 +398,6 @@ footer a:hover{
     
     .secondImage:after {
     left: 270px;
-    top: 180px;
-}
+    top: 110px;
+    }
 }
